edge/log/build_2026-04-14_18-39-44/bishe_detector/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.16 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.9 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 4.9.0 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found image_transport: 3.1.12 (/opt/ros/humble/share/image_transport/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found bishe_msgs: 0.1.0 (/home/jetson/projects/bishe/edge/install/bishe_msgs/share/bishe_msgs/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jetson/projects/bishe/edge/build/bishe_detector
Consolidate compiler generated dependencies of target detector_node
[ 16%] Building CXX object CMakeFiles/detector_node.dir/src/yolov8.cc.o
/home/jetson/projects/bishe/edge/src/bishe_detector/src/yolov8.cc: In member function ‘DetectionResult YOLOv8::BuildDetectionResult(cv::Mat&, const cv::Mat&, const Size&)’:
/home/jetson/projects/bishe/edge/src/bishe_detector/src/yolov8.cc:185:25: error: ‘rclcpp’ has not been declared
  185 |             RCLCPP_WARN(rclcpp::get_logger("YOLOv8"), "检测到未定义类别ID: %d", filtered_class_ids[i]);
      |                         ^~~~~~
/home/jetson/projects/bishe/edge/src/bishe_detector/src/yolov8.cc:185:13: error: ‘RCLCPP_WARN’ was not declared in this scope
  185 |             RCLCPP_WARN(rclcpp::get_logger("YOLOv8"), "检测到未定义类别ID: %d", filtered_class_ids[i]);
      |             ^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/detector_node.dir/build.make:104：CMakeFiles/detector_node.dir/src/yolov8.cc.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/detector_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
